css/jquery.terminal-src.css
/*!
 *       __ _____                     ________                              __
 *      / // _  /__ __ _____ ___ __ _/__  ___/__ ___ ______ __ __  __ ___  / /
 *  __ / // // // // // _  // _// // / / // _  // _//     // //  \/ // _ \/ /
 * /  / // // // // // ___// / / // / / // ___// / / / / // // /\  // // / /__
 * \___//____ \\___//____//_/ _\_  / /_//____//_/ /_/ /_//_//_/ /_/ \__\_\___/
 *           \/              /____/                              version {{VER}}
 * http://terminal.jcubic.pl
 *
 * This file is part of jQuery Terminal.
 *
 * Copyright (c) 2011-2018 Jakub Jankiewicz <http://jcubic.pl>
 * Released under the MIT license
 *
 * Date: {{DATE}}
 */
.terminal .terminal-output .format, .cmd .format,
.cmd .prompt, .cmd .prompt div, .terminal .terminal-output div div{
    display: inline-block;
}
.terminal h1, .terminal h2, .terminal h3, .terminal h4, .terminal h5, .terminal h6, .terminal pre, .cmd {
    margin: 0;
}
.terminal h1, .terminal h2, .terminal h3, .terminal h4, .terminal h5, .terminal h6 {
    line-height: 1.2em;
}
/*
.cmd .mask {
    width: 10px;
    height: 11px;
    background: black;
    z-index: 100;
}
*/
.cmd .clipboard {
    position: absolute;
    left: -16px;
    top: 0;
    width: 16px;
    height: 16px;
    /* this seems to work after all on Android */
    /*left: -99999px;
    clip: rect(1px,1px,1px,1px);
    /* on desktop textarea appear when paste */
    /* opacity is needed for Edge and IE
    opacity: 0.01;
    filter: alpha(opacity = 0.01);
    filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0.01);*/
    background: transparent;
    border: none;
    color: transparent;
    outline: none;
    padding: 0;
    resize: none;
    z-index: 1000;
    overflow: hidden;
    white-space: pre;
    text-indent: -9999em; /* better cursor hiding for Safari and IE */
}
.cmd .noselect, .cmd [role="presentation"]:not(.cursor-line) > span:last-child,
.cmd .cursor-line > span:last-child > span:last-child {
    -webkit-touch-callout: none; /* iOS Safari */
      -webkit-user-select: none; /* Safari */
       -khtml-user-select: none; /* Konqueror HTML */
         -moz-user-select: none; /* Firefox */
          -ms-user-select: none; /* Internet Explorer/Edge */
              user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
}
.terminal img, .terminal audio, .terminal object, .terminal canvas {
    cursor: default;
}
.terminal .error {
    color: #f00;
}
.terminal {
    position: relative;
    /*overflow: hidden;*/
    overflow-y: auto;
    /* overflow-x: hidden; */
}
.terminal {
    contain: content;
}
body.terminal {
    min-height: 100vh;
    height: 100%;
}
body.terminal {
    margin: 0;
}
.terminal > div {
    min-height: 100%;
}
.terminal > .resizer, .terminal > .font .resizer {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    overflow: hidden;
    pointer-events: none;
    z-index: -1;
    height: 100%;
    border: none;
    padding: 0;
    width: 100%
}
.cmd {
    padding: 0;
    position: relative;
    float: left;
}
.terminal a[tabindex="1000"],
.terminal a[tabindex="1000"]:active,
.terminal a[tabindex="1000"]:focus {
    outline: none;
}
.terminal .inverted, .cmd .inverted {
    background-color: #aaa;
    color: #000;
}
.cmd .cursor {
    display: inline-block;
    position: relative;
    height: 14px;
    min-width: 1ch;
    /* box-sizing: border-box; */
}
.cmd .cursor span span {
    border-bottom: 3px solid transparent;
    margin-bottom: -3px;
    background-clip: content-box;
    border-left: 1px solid transparent;
    position: absolute;
    top: 0;
    margin-left: -1px;
    background: inherit;
    color: inherit;
}
.cmd .cursor-line > span {
    display: inline-block;
    float: left;
}
.cmd .cursor.blink span span {
    -webkit-animation: terminal-blink 1s infinite linear;
       -moz-animation: terminal-blink 1s infinite linear;
        -ms-animation: terminal-blink 1s infinite linear;
            animation: terminal-blink 1s infinite linear;
}
.bar.terminal .inverted, .bar.cmd .inverted {
    border-left-color: #aaa;
}
.terminal .terminal-output div div, .cmd .prompt {
    display: block;
    line-height: 14px;
    height: auto;
}
.terminal .terminal-output > div:not(.raw) div {
    white-space: nowrap;
}
.cmd .prompt > span {
    float: left;
}
.terminal, .terminal-wrapper *, .cmd, .cmd * {
    font-family: monospace;
    /*font-family: FreeMono, monospace; this don't work on Android */
    color: #aaa;
    background-color: #000;
    font-size: 12px;
    line-height: 14px;
}
.terminal, .cmd {
    box-sizing: border-box;
    cursor: text;
}
.cmd .cursor span:not(.token) {
    color: inherit;
    background-color: inherit;
}
.cmd .cursor * {
    background-color: transparent;
}
.cmd div {
    clear: both;
    min-height: 14px;
}
.cmd .prompt + div {
    clear: right;
}
.terminal-output > div > div {
    min-height: 14px;
}
terminal .terminal-output > div {
    margin-top: -1px;
}
.terminal-output > div.raw > div * {
    overflow-wrap: break-word;
    word-wrap: break-word;
}
.terminal .font {
    position: absolute;
    float: left;
    font-size: inherit;
    line-height: inherit;
    top: -100%;
    left: 0;
    margin-bottom: 1px;
}
.terminal .terminal-output div span {
    display: inline-block;
}
.cmd > span:not(.prompt) {
    float: left;
}
.cmd .prompt span.line {
    display: block;
    float: none;
}
.terminal table {
    border-collapse: collapse;
}
.terminal td {
    border: 1px solid #aaa;
}
.cmd span[data-text] span {
    background: inherit;
    color: inherit;
}
/*
 * this is set so animation can select original color as backgound for cursor
 * so span can have --color for selection
 */
.cmd {
    --original-color: var(--color, #aaa);
}
/* ... */

